--- a/ezDates/web/css/header.css
+++ b/ezDates/web/css/header.css
@@ -1,6 +1,7 @@
 .title-block {
     border: 1px solid black;
     background-color: #333;
+    width: 100%;
 }
 
 .titulo {
@@ -23,23 +24,7 @@
 
 .navbar {
     bottom: 0;
-    border-radius: 10px;
+    border-radius: 20px;
     box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
 }
 
-
-.navbar-collapse.left .navbar-nav {
-    border: 1px solid red;
-}
-
-
-.navbar-collapse.right {
-    border: 1px solid red;
-    text-align: right;
-    right: 0;
-}
-
-.navbar-nav .nav-item{
-    text-align: right;
-    right: 100;
-}
