--- a/ezDates/web/css/registro.css
+++ b/ezDates/web/css/registro.css
@@ -5,28 +5,75 @@ body {
 }
 
 
-.container-fluid-register{
+.container-fluid-register {
     background-color: #c8e2fc;
     flex-grow: 1;
 }
 
-.container-footer{
-    position: fixed;
+.container-footer {
+    position: relative;
     width: 100%;
     bottom: 0;
+    margin-top: 20px;
 }
 
-footer{
+footer {
     margin-top: 0;
     padding-top: 0;
 }
 
-.boton-registro{
-    border: 1px solid black;
+.boton-registro {
+
     margin-top: 15px;
 }
 
-.info{
+.info {
     text-align: center;
     margin-top: 20px;
+}
+
+/* Estilos para el contenedor */
+.container {
+    max-width: 400px;
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 25px;
+}
+
+/* Estilos para el encabezado de la tarjeta */
+.container h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+
+/* Estilos para el botón */
+.container .btn {
+    display: block;
+    width: 100%;
+    padding: 10px;
+    background-color: #4caf50;
+    color: #fff;
+    border: none;
+    border-radius: 4px;
+    cursor: pointer;
+}
+
+.container .btn:hover {
+    background-color: #45a049;
+}
+
+/* Estilos para el enlace de retorno */
+.container a {
+    display: block;
+    
+    margin-left: 20px;
+    margin-top: 20px;
+    color: #000;
+}
+
+.container a:hover {
+    text-decoration: underline;
 }
