--- a/ezDates/web/css/header.css
+++ b/ezDates/web/css/header.css
@@ -3,8 +3,8 @@
     width: 100%;
 }
 
-.titulo {
-
+.titulo h1{
+    margin-top: 15px;
     font-family: Arial, sans-serif;
     font-size: 54px;
     font-weight: bold;
@@ -13,8 +13,8 @@
     
 }
 
-.subTitulo {
-
+.subTitulo h1{
+    margin-top: 27px;
     font-family: Arial, sans-serif;
     font-size: 36px;
     font-weight: bold;
@@ -27,10 +27,22 @@
     bottom: 0;
     background-color: #218bf5;
     border-radius: 20px;
-    box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.3);
+    box-shadow: 3px 3px 3px rgba(154, 203, 246, 0.3);
+}
+
+.navbar-nav{
+    display: flex;
+    flex-direction: row;
+    justify-content: flex-end;
 }
 
 .nav-link{
     color: #fff;
+    font-size: 18px;
 }
+
+.nav-item{
+    margin-right: 20px;
+}
+
 
