--- a/ezDates/web/css/login.css
+++ b/ezDates/web/css/login.css
@@ -3,18 +3,92 @@ body {
     flex-direction: column;
     min-height: 100vh;
 }
-.container-fluid-login{
-    border: 1px solid rgb(255, 1, 1);
-    background-color: aquamarine;
+
+
+.container-fluid-login {
+    background-color: #c8e2fc;
     flex-grow: 1;
+    bottom: 0;
+    margin-bottom: 0;
 }
 
-.container-login{
-    border: 1px solid blue;
-}
-
-.container-footer{
-    position: fixed;
+.container-footer {
+    position: relative;
     width: 100%;
     bottom: 0;
+    margin-top: 0;
+}
+
+footer {
+    margin-top: 0;
+    padding-top: 0;
+}
+
+
+.boton-registro {
+
+    margin-top: 15px;
+}
+
+.info {
+    text-align: center;
+    margin-top: 20px;
+}
+
+.card-body {
+    width: 600px;
+    margin: 0 auto;
+    
+}
+
+/* Estilos para el contenedor */
+.container {
+    width: 50%; /* Puedes ajustar el valor según tus necesidades */
+    height: 400px;
+    
+    margin: 0 auto;
+    padding: 20px;
+    background-color: #ffffff;
+    box-shadow: 0 10px 10px rgba(0, 0, 0, 0.1);
+    border-radius: 25px;
+  }
+  
+
+.form-group {
+    margin-bottom: 20px;
+}
+
+/* Estilos para el encabezado de la tarjeta */
+.container h2 {
+    text-align: center;
+    margin-bottom: 20px;
+}
+
+
+/* Estilos para el botón */
+.container .btn {
+
+    display: block;
+    margin: 0 auto;
+    width: 25%;
+    padding: 10px;
+    background-color: #4caf50;
+    color: #fff;
+    border: none;
+    border-radius: 10px;
+    cursor: pointer;
+}
+
+
+.container .btn:hover {
+    background-color: #45a049;
+}
+
+/* Estilos para el enlace de retorno */
+.container a {
+    display: block;
+
+    margin-left: 20px;
+    margin-top: 30px;
+    color: #000;
 }
