--- a/ezDates/web/css/fotos_trending.css
+++ b/ezDates/web/css/fotos_trending.css
@@ -7,10 +7,13 @@ body {
     background-color: #c8e2fc;
 }
 
-
-.container-content{
+.container-body{
     background-color: #c8e2fc;
-    flex-grow: 1;
+    
+}
+.container-content{
+    margin: 0 50px;
+    margin-bottom: 50px;
 }
 
 
