--- a/ezDates/web/css/header.css
+++ b/ezDates/web/css/header.css
@@ -22,6 +22,11 @@
     text-align: left;
 }
 
+.index{
+    color: #fff;
+    font-size: 24px;
+}
+
 .navbar {
     margin-top: 20px;
     bottom: 0;
