--- a/ezDates/web/css/login.css
+++ b/ezDates/web/css/login.css
@@ -2,6 +2,7 @@ body {
     display: flex;
     flex-direction: column;
     min-height: 100vh;
+    background-color: #c8e2fc;
 }
 
 
@@ -38,6 +39,7 @@ footer {
 .card-body {
     width: 600px;
     margin: 0 auto;
+    margin-bottom: 50px;
     
 }
 
@@ -45,7 +47,7 @@ footer {
 .container {
     width: 50%; /* Puedes ajustar el valor según tus necesidades */
     height: 400px;
-    
+    margin-bottom: 50px;
     margin: 0 auto;
     padding: 20px;
     background-color: #ffffff;
